--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@capacitor/cli": "^7.4.1",
+    "@capacitor/core": "^7.4.1",
     "accepts": "^2.0.0",
     "asynckit": "^0.4.0",
     "axios": "^1.10.0",
@@ -38,6 +40,7 @@
     "function-bind": "^1.1.2",
     "get-intrinsic": "^1.3.0",
     "get-proto": "^1.0.1",
+    "googleapis": "^152.0.0",
     "gopd": "^1.2.0",
     "has-symbols": "^1.1.0",
     "has-tostringtag": "^1.0.2",
