--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "accepts": "^2.0.0",
     "asynckit": "^0.4.0",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
@@ -55,6 +56,7 @@
     "merge-descriptors": "^2.0.0",
     "mime-db": "^1.54.0",
     "mime-types": "^3.0.1",
+    "mongoose": "^8.16.2",
     "ms": "^2.1.3",
     "negotiator": "^1.0.0",
     "object-assign": "^4.1.1",
